# AgiDiGraph

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
agidigraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: __init__.py  agent.py  config.py  graph_schema.py  main.py  schemas.py  services.py
data/: public_emdat_custom_request_2025-10-04_90_2.csv
graphs/: cache_manifest.json  disaster_impacts.graphml  disaster_impacts.json
scripts/: build_graph.py  data_loader.py  demo_scenario.py
tests/: test_api.py  test_services.py
ui/: app.py
